Add c++11 option to fix compilation with g++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,4 +20,5 @@ add_executable(Citip
     ${CMAKE_CURRENT_BINARY_DIR}/parser.cxx
     ${CMAKE_CURRENT_BINARY_DIR}/scanner.cxx
 )
+target_compile_options(Citip PUBLIC -std=c++11)
 target_link_libraries(Citip glpk)
