--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ Citip
 *.[ch]xx
 *.hh
 
+# Generated dependencies
+*.d
+
 # The following section is taken from the file 'C++.gitignore' in
 # https://github.com/github/gitignore/blob/master/ - commit 62d6528:
 
